# cdgplay

./: CMakeLists.txt  arguments.cpp  arguments.h  cdgplay.pro  cdgvideosurface.cpp  dlgcdg.cpp  dlgcdg.h  dlgcdg.ui  main.cpp  settings.cpp  settings.h
libCDG/include/: libCDG.h
libCDG/src/: libCDG.cpp
